@@ -1,3 +1,8 @@
+2003/08/18 17:28 muppetman
+
+	* GSignal.xs: quiet down remember_closure and forget_closure, now
+	that i'm sure they work.
+
 2003/08/16 20:53 muppetman
 
 	* GSignal.xs: implemented wrappers for g_signal_handlers_block_by_func,
